fix spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -123,7 +123,7 @@ figcaption {
 .home {
   max-width: 28em;
   margin: auto;
-  padding: 0.8em 1em;
+  // padding: 0.8em 1em;
 }
 
 #swag {
@@ -133,9 +133,10 @@ figcaption {
 }
 
 .content-title {
-  font-size: 1.5em;
-  margin-bottom: 1em;
+  font-size: 1.2em;
+  max-width: 48rem;
   text-align: center;
+  letter-spacing: 3px;
 }
 
 .post-date {
